# anymap-serde

./: Cargo.toml  README.md  setup.sh
.github/workflows/: ci.yml
examples/: basic.rs
hooks/: pre-push
src/: entry.rs  lib.rs  stable_type_id.rs  write_guard.rs
tests/: deserialization_fails.rs  modify_roundtrip.rs  roundtrip.rs  scratchpad.rs
